vlib/v/parser/tests/interface_duplicate_interface_method.vv
// duplicate interface methods in decleration
interface Abc {
	fun()
	fun()
}
